use macro for mount defaulting

--- a/nfs/map.jinja
+++ b/nfs/map.jinja
@@ -12,6 +12,11 @@
     'default': {
         'client': {
             'mounts': []
+        },
+        'mounts': {
+            'mkmnt': True,
+            'persist': True,
+            'mount': True
         }
     }
 } %}
